[project]
name = "fabrik-frontend"
version = "0.1.0"
description = "Desktop frontend for the Factory Demo REST API"
requires-python = ">=3.11"
dependencies = ["requests>=2.32"]

[project.scripts]
fabrik-frontend = "fabrik_frontend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/fabrik_frontend"]
